<resources>

    <string name="app_name">Priceelist</string>
    <string name="total_amount">"%s"</string>
    <string name="title">Title</string>
    <string name="amount_hint">Unit price</string>
    <string name="list_item_hint">List item</string>
    <string name="total_button">Total</string>
    <string name="unit_hint">Qty</string>
    <string name="make_list">Make a list</string>
    <string name="done">Done!</string>
    <string name="sn1">1</string>
    <string name="sn2">2</string>
    <string name="sn3">3</string>
    <string name="sn4">4</string>
    <string name="sn5">5</string>
    <string name="sn6">6</string>
    <string name="sn7">7</string>
    <string name="sn8">8</string>
    <string name="sn9">9</string>
    <string name="sn10">10</string>
    <string name="sn11">11</string>
    <string name="sn12">12</string>
    <string name="sn13">13</string>
    <string name="sn14">14</string>
    <string name="sn15">15</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="up_button">back</string>
    <string name="saved_lists">Your saved lists</string>
    <string name="saved">Saved:</string>
    <string name="create_invoice">Create an invoice</string>
    <string name="make_copy">Make a copy</string>
    <string name="menu_delete">Delete Client</string>
    <string name="menu_share">Share Client details</string>
    <string name="calculate_total">Calculate Total</string>
    <string name="delete_question">Are you sure you want to delete this list?</string>
    <string name="delete_client_question">Are you sure you want to delete this client?</string>
    <string name="clear_invoice_question">Do you want to mark this invoice as cleared?</string>
    <string name="delete_invoice_question">Are you sure you want to delete this invoice?</string>
    <string name="delete_receipt_question">Are you sure you want to delete this receipt?</string>
    <string name="discard_invoice_question">Note that Invoice will be discarded if not saved. Are you sure you want to continue?</string>
    <string name="discard_receipt_question">Note that Receipt will be discarded if not saved. Are you sure you want to continue?</string>
    <string name="request_permission_rationale">Storage access is required to save and share your documents.</string>
    <string name="storage_permission_granted">Storage access granted! Action in process.</string>
    <string name="storage_permission_denied">Storage access denied! Could not complete action.</string>
    <string name="ok">Okay</string>
    <string name="saved_to_device">Saved to device!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_details">Client details</string>
    <string name="next">Next</string>
    <string name="client_name">Client name<font color='#FF0000'>*</font></string>
    <string name="phone">Phone<font color='#FF0000'>*</font></string>
    <string name="email">Email</string>
    <string name="address">Address<font color='#FF0000'>*</font></string>
    <string name="save_client">Save client?</string>
    <string name="menu_pricelist">Lists</string>
    <string name="menu_invoice">Invoices</string>
    <string name="menu_receipt">Receipts</string>
    <string name="manage_clients">Manage Clients</string>
    <string name="tagline">tagline goes here</string>
    <string name="your_saved_clients">Your saved clients</string>

    <!--Previous-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="saved_invoices">Your saved invoices</string>
    <string name="saved_receipts">Your saved receipts</string>
    <string name="edit">Edit Client</string>
    <string name="save">SAVE</string>
    <string name="list_menu_delete">Delete List</string>
    <string name="list_menu_download">Download List</string>
    <string name="list_menu_share">Share List</string>
    <string name="add_client">Add Client</string>
    <string name="created">Created on:</string>
    <string name="edit_invoice">Edit Invoice</string>
    <string name="edit_receipt">Edit Receipt</string>
    <string name="invoice_menu_delete">Delete Invoice</string>
    <string name="receipt_menu_delete">Delete Receipt</string>
    <string name="invoice_menu_send">Send Invoice</string>
    <string name="receipt_menu_send">Send Receipt</string>
    <string name="invoice_menu_send_new">Send to new Client</string>
    <string name="invoice_menu_download">Download Invoice</string>
    <string name="receipt_menu_download">Download Receipt</string>
    <string name="preview">Preview</string>
    <string name="invoice_details">Invoice details</string>
    <string name="receipt_details">Receipt details</string>
    <string name="item_description">Item description</string>
    <string name="choose_saved_client">Choose from saved clients</string>
    <string name="discard">Discard</string>
    <string name="invoice_title">Invoice</string>
    <string name="receipt_title">Receipt</string>
    <string name="priceelist_inc">PRICEELIST INC.</string>
    <string name="make_payments">PLEASE MAKE PAYMENTS TO:</string>
    <string name="menu_account">Account</string>
    <string name="to_receiver_prefix">To:</string>
    <string name="edit_btn">Edit</string>
    <string name="sample_address">Google HQ, Mountain View, California, United States of America</string>
    <string name="add_a_note">Add a note</string>
    <string name="other_details">Other details</string>
    <string name="download_list">DOWNLOAD</string>
    <string name="share_list">SHARE</string>
    <string name="loading">Loading</string>
    <string name="basic_information">Basic Information</string>
    <string name="payment_information">Payment Information</string>
    <string name="stats">Stats</string>
    <string name="account">Account</string>
    <string name="create_account">Create an account</string>
    <string name="business_name">Business name<font color='#FF0000'>*</font></string>
    <string name="phone2">Phone 2</string>
    <string name="business_category">Business category</string>
    <string name="profile_image">Profile Image</string>
    <string name="institution_name">Institution name</string>
    <string name="payment_name">Payment account name</string>
    <string name="payment_id">Payment account no/ID</string>
    <string name="create">Create</string>
    <string name="business_name_2">Business name</string>
    <string name="business_phone_title">Business phone</string>
    <string name="business_email">Business email</string>
    <string name="business_address">Business address</string>
    <string name="account_information">Account information</string>
    <string name="payment_name_info">Account name</string>
    <string name="account_no">Account no/ID</string>
    <string name="add_another_phone_number">Add another phone number</string>
    <string name="add_another">Add another number</string>
    <string name="general">General</string>
    <string name="no_created">Number created</string>
    <string name="no_cleared">Number cleared</string>
    <string name="stats_2000">2000</string>
    <string name="no_sent">Number sent</string>
    <string name="total_amount_cleared">Total cleared</string>
    <string name="stats_200_000">$200,000</string>
    <string name="total_amount_sent">Total sent</string>
    <string name="history">History</string>
    <string name="list">List</string>
    <string name="menu_make_receipt">Make Receipt</string>
    <string name="price_details">Price details</string>
    <string name="welcome">Welcome!</string>
    <string name="set_up_account">Set up your account now</string>
    <string name="please_wait">Please wait ...</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="choosing_a_desired_currency">1. Choosing a desired currency</string>
    <string name="desired_currency_text1">To set the app\'s curency to your local currency or to any desired currency of your choice, simply change your phone\'s language (in the language settings of your phone) to your local language or to the language corresponding to the desired currency.\nE.g. For US Dollars, go to:</string>
    <string name="settings">Settings</string>
    <string name="language_input"><![CDATA[Language & Input]]></string>
    <string name="english_us">English (United States)</string>
    <string name="english">English</string>
    <string name="input_limits">2. Input limits</string>
    <string name="input_limit_text">Priceelist app\'s input fields have input limits set based on devices\' sizes and other criteria (such as app experience). Where input limit is imposed due to device size, smaller devices such as mobile phones accept fewer number of characters than larger devices such as tablets.\nThe table below displays different input fields and their maximum input lengths.</string>
    <string name="total_created">Total created</string>
    <string name="invoice_menu_clear">Clear Invoice</string>
    <string name="set_up">Set up</string>
    <string name="view_history">View history</string>
    <string name="nothing_invoice">Nothing in Invoices yet</string>
    <string name="to_get_started">To get started, set up your user account now</string>
    <string name="nothing_receipts">Nothing in Receipts yet</string>
    <string name="empty_saved_lists_text">Your saved Lists will appear here</string>
    <string name="no_saved_client">You have no saved Client yet</string>
</resources>