<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:elevation="2dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/up_button"
            android:focusable="true"
            android:minWidth="28dp"
            android:minHeight="28dp"
            app:srcCompat="@drawable/ic_arrow_back"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/business_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/help_support"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="11dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/choosing_a_desired_currency"
                android:textColor="@color/gray_dark"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desired_currency_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:lineSpacingExtra="4sp"
                android:text="@string/desired_currency_text1"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/title_1"
                tools:layout_editor_absoluteX="16dp" />

            <LinearLayout
                android:id="@+id/directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/desired_currency_1"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:srcCompat="@drawable/ic_settings"
                    app:tint="@color/gray_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/settings"
                    android:textColor="@color/gray_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    tools:ignore="SmallSp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin"
                    app:srcCompat="@drawable/ic_arrow_forward_2"
                    app:tint="@color/gray_dark" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="@dimen/margin"
                    app:srcCompat="@drawable/ic_language"
                    app:tint="@color/gray_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/language_input"
                    android:textColor="@color/gray_dark"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    tools:ignore="SmallSp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin"
                    app:srcCompat="@drawable/ic_arrow_forward_2"
                    app:tint="@color/gray_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/english"
                    android:textColor="@color/gray_dark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/directions" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/english_us"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/directions"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin32"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/input_limits"
                android:textColor="@color/gray_dark"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="4dp" />

            <TextView
                android:id="@+id/input_limits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:lineSpacingExtra="4sp"
                android:text="@string/input_limit_text"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/title_2"
                tools:layout_editor_absoluteX="16dp" />

            <FrameLayout
                android:id="@+id/table_frame"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@id/input_limits">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/input_limits_table" />
            </FrameLayout>

            <TextView
                android:id="@+id/title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/input_limits"
                android:textColor="@color/gray_dark"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/table_frame"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>